[gd_scene load_steps=3 format=3 uid="uid://cybb6v2063up5"]

[ext_resource type="Script" uid="uid://bl8oygk52krcg" path="res://scripts/UI/menus/advanced mode menu/advanced_mode_menu.gd" id="1_8xj46"]
[ext_resource type="PackedScene" uid="uid://yp5jb0ky331u" path="res://scenes/UI/components/int selector/int_selector.tscn" id="1_cs7l3"]

[node name="AdvancedModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -151.0
offset_right = 67.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8xj46")

[node name="ToturialButton" type="Button" parent="."]
layout_mode = 2
offset_right = 134.0
offset_bottom = 41.0
text = "Toturial"

[node name="WidthSelector" parent="." instance=ExtResource("1_cs7l3")]
layout_mode = 2
offset_top = 57.0
offset_right = 134.0
offset_bottom = 109.0

[node name="HeightSelector" parent="." instance=ExtResource("1_cs7l3")]
layout_mode = 2
offset_top = 125.0
offset_right = 134.0
offset_bottom = 177.0

[node name="ModuloSelector" parent="." instance=ExtResource("1_cs7l3")]
layout_mode = 2
offset_top = 193.0
offset_right = 134.0
offset_bottom = 245.0
min_value = 2

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
offset_top = 261.0
offset_right = 134.0
offset_bottom = 302.0
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
